[package]
name = "esp-wokwi-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tungstenite = "0.17.2"
tokio-tungstenite = "0.17.1"
anyhow = "1.0.57"
serde_json = "1.0.81"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.13.0"
clap = "3.1.18"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.21"
bytes = "1.1.0"
lazy_static = "1"
espflash = { version = "1.5.2-dev", git = "https://github.com/esp-rs/espflash", branch = "feat/open-the-gates" }