[package]
name = "wokwi-server"
version = "0.1.0"
authors = ["Scott Mabin <scott@mabez.dev>"]
categories = ["embedded", "hardware-support", "no-std", "emulator"]
keywords = ["esp", "wokwi", "runner", "espflash"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/mabezdev/wokwi-server"
edition = "2021"

[dependencies]
tungstenite = "0.17.2"
tokio-tungstenite = "0.17.1"
anyhow = "1.0.57"
serde_json = "1.0.81"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.13.0"
clap = { version = "3.1.18", features=["env"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.21"
bytes = "1.1.0"
espflash = { version = "1.5.2-dev", git = "https://github.com/esp-rs/espflash", branch = "bugfix/chip-name-esptool" }
opener = "0.5.0"