[package]
name = "wokwi-server"
description = "A tool for running embedded applications in Wokwi online simulator"
version = "0.2.0"
authors = ["Scott Mabin <scott@mabez.dev>"]
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["esp", "wokwi", "runner", "espflash"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/mabezdev/wokwi-server"
edition = "2021"

[dependencies]
tungstenite = "0.17.2"
tokio-tungstenite = "0.17.1"
anyhow = "1.0.57"
serde_json = "1.0.81"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.13.0"
clap = { version = "3.1.18", features=["env", "derive"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.21"
bytes = "1.1.0"
espflash = "2.0.0-rc.1"
esp-idf-part = "0.1.1"
xmas-elf = "0.8.0"
opener = "0.5.0"

console-subscriber = { version = "0.1.6", optional = true }

[features]
tokio-console = ["dep:console-subscriber"]